# Backtest_Engine

Backtest/: .gitignore  CLAUDE.md  OPTIMIZATION_RESULTS.md  README.md  analyze_deep.py  generate_annual.py  generate_comparison_report.py  generate_csv_summary.py  generate_final_report.py  generate_monthly_report.py  generate_optimization_report.py  monitor_optimization.py  optimize_momentum_dca.py  pyproject.toml  quick_view_optimization.py  requirements.txt  run_backtest.py  run_optimal_backtest.py  verify_data_consistency.py
Backtest/backtest_engine/: __init__.py  config.py
Backtest/backtest_engine/core/: __init__.py  broker.py  consolidated_data.py  data.py  engine.py  order.py  portfolio.py  position.py  strategy.py
Backtest/backtest_engine/metrics/: __init__.py  performance.py  statistics.py
Backtest/backtest_engine/strategies/: __init__.py  momentum_dca.py  sp500_dca_simple.py  sp500_dca_sma_filter.py
Backtest/backtest_engine/utils/: __init__.py  helpers.py  indicators.py
Backtest/backtest_engine/visualization/: __init__.py  plots.py
Backtest/memory/: MEMORY.md  optimization_20260329.md
Backtest/tests/: conftest.py
Backtest/tests/integration/: test_full_backtest.py
Backtest/tests/unit/: test_broker.py  test_data.py  test_engine.py  test_indicators.py  test_metrics.py  test_order.py  test_portfolio.py  test_position.py
Backtest/tests/unit/strategies/: __init__.py
Scrap_Data/: .env.example  .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
Scrap_Data/.claude/: settings.json
Scrap_Data/docs/: CHANGELOG.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md
Scrap_Data/scripts/: validate_sample.py
Scrap_Data/survivorship_bias_free_data/: __init__.py  config.py  data_manager.py
Scrap_Data/survivorship_bias_free_data/processors/: __init__.py  corporate_events.py  data_cleaner.py  survivorship_adjuster.py
Scrap_Data/survivorship_bias_free_data/scrapers/: __init__.py  base_scraper.py  constituents_scraper.py  price_scraper.py  wikipedia_scraper.py
Scrap_Data/survivorship_bias_free_data/utils/: helpers.py  logger.py  ticker_mapper.py
Scrap_Data/tests/: test_config.py  test_helpers.py
